--- a/gabarito/aula2/index.html
+++ b/gabarito/aula2/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Resgate Pet</title>
-        <link rel="stylesheet" href="./css/style.css" >
+        <link rel="stylesheet" href="style.css" >
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
