--- a/gabarito/aula3/index.html
+++ b/gabarito/aula3/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Resgate Pet</title>
-        <link rel="stylesheet" href="./css/style.css" >
+        <link rel="stylesheet" href="style.css" >
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
@@ -28,19 +28,19 @@
                 </nav>
             </header>
             <section class="container-video">
-                <video class="container-video__movie" width="100%" loop muted>
+                <video class="container-video__movie" width="100%" loop muted autoplay>
                     <source src="../images/menino-e-cachorro.mp4" type="video/mp4">
                     Seu navegador não é compativel com este vídeo.
                 </video>
                 <div class="container-video__onboarding">
                     <h1 class="onboarding__title">Resgate Pet</h1>
                     <p class="onboarding__subtitle" title="meu texto">Conheça mais sobre o trabalho da nossa ONG</p>
-                    <a class="onboarding__link" href="#">Veja como ajudar</a>
+                    <a class="onboarding__link button" href="#">Veja como ajudar</a>
                 </div>
             </section>
             <section id="adopting" class="container-adopting">
                 <h2 class="container-adopting__title">Adote</h2>
-                <article class="container-adopting__article">
+                <article class="container-adopting__article clearfix">
                     <h3>Cachorros</h3>
                     <div class="container-adopting__item">
                         <img src="../images/dog1.jpg" alt="cachorro deitado grama"  width="200px">
@@ -55,7 +55,7 @@
                         <p>Mi</p>
                     </div>
                 </article>
-                <article class="container-adopting__article">
+                <article class="container-adopting__article clearfix">
                     <h3>Gatos</h3>
                     <div class="container-adopting__item">
                         <img src="../images/cat1.jpg" alt="gato sentado olhando para a camêra" width="200px">
@@ -73,24 +73,24 @@
             </section>
             <section id="contribute" class="container-contribute">
                 <h2>Contribua</h2>
-                <div class="contribute-info">
+                <div class="contribute__info">
                     <img class="contribute__image" src="../images/ilustracao2.svg" width="300px" alt="Ilustração cachorro e gato lado a lado" />
-                </div>
-                <div class="contribute__text">
-                    <p>Ajude a manter a nossa ONG Regaste Pet achando lares para nossos queridos bichinhos!</p>
-                    <button class="button">Faça sua doação</button>
-                </div>
+                    <div class="contribute__text">
+                        <p>Ajude a manter a nossa ONG Regaste Pet achando lares para nossos queridos bichinhos!</p>
+                        <button class="button">Faça sua doação</button>
+                    </div>
+                </div>  
             </section>
-            <section id="singup">
+            <section id="singup" class="container-signup">
                 <h2>Cadastra-se</h2>
-                <form>
-                    <label for="inputemail">Email</label>
+                <form class="container-signup__form">
+                    <label for="inputemail">Email: </label>
                     <input placeholder="Insira seu email aqui" type="email" id="inputemail" name="email">
-                    <button type="submit">Enviar</button>
+                    <button class="button" type="submit">Enviar</button>
                 </form>
             </section>
-            <footer>
-                <div>
+            <footer class="footer">
+                <div class="footer__info">
                     <img src="../images/ilustracao1.svg" alt="Ilustração de cachorro e gato" width="100px" />
                     <address>
                         <p>Regaste Pet</p>
